fix index section alignment without description

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -139,6 +139,7 @@ section.intro-title:last-of-type {
 }
 section.intro-title:last-of-type .section-content {
   max-width: 36em;
+  align-items: center;
 }
 section.intro {
   display: flex;
